task details and comments
