# Rework/HighCode.Domain/ApiRequests/Reactions/PostReactionForCommentCommand.cs
@@ -1,5 +1,4 @@
 ﻿using HighCode.Domain.ApiResponses.Reactions;
-using HighCode.Domain.Models;
 using HighCode.Domain.Responses;
 using MediatR;
 
@@ -8,5 +7,5 @@ namespace HighCode.Domain.ApiRequests.Reactions;
 public class PostReactionForCommentCommand : IRequest<Result<PostReactionForCommentResponse>>
 {
     public Guid CommentId { get; set; }
-    public CommentReactionType CommentReaction { get; set; }
+    public int CommentReaction { get; set; }
 }
